# libevent-server

./: CMakeLists.txt  README.md  WebSocketHandshake.h  WebSocketSession.cpp  WebSocketSession.h  libevent_server.vcxproj  main.cpp
appsrc/: main.cpp
libevent_include/event2/: event-config.h  event.h
libevent_lib/Debug/: event.exp  event.lib  event_core.exp  event_core.lib  event_extra.exp  event_extra.lib  event_openssl.exp
utils/: StringUtil.cpp  StringUtil.h
websocketsrc/: WebSocketServer.h  WebSocketSession.cpp  WebSocketSession.h
x64/Debug/: vc142.idb
x64/Debug/libevent_server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  libevent_server.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
zlib/: ZlibUtil.cpp  ZlibUtil.h  gzguts.h  gzlib.c  zconf.h  zlib.h  zutil.c  zutil.h
